fix-ups and improvements